added pdf file to download

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
                 <p>
                     Un desarrollador Front-End especializado en crear experiencias web modernas, funcionales y atractivas. Con un enfoque en la calidad del código y el diseño UI/UX, transformo ideas en productos digitales eficientes.
                 </p>
-                <button class="var-button">Descargar CV</button>
+                <a href="./Assets/Enzo_Tur_CV_2025_frontend.pdf" download="./Assets/Enzo_Tur_CV_2025_frontend.pdf" class="var-button" >
+                    Descargar CV
+                </a>
+                
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/enzo-antonio-tur-aab714214/" target="_blank">
                         <i class="fa-brands fa-linkedin-in"></i>
